Improved styling, refactored, improved webscraping + image selection, update database services/repos, improved open-pack endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   card-generator-service:
     build: ./
+    container_name: card-generator-service
     environment:
       OLLAMA_URL: http://host.docker.internal:11434
       DB_PATH: /data/app.db
