--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ httpx==0.28.1
 idna==3.11
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+numpy==2.3.5
 ollama==0.6.1
+pillow==12.0.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 requests==2.32.5
